# nala

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  _test_stream.py
.claude/: settings.local.json
.github/workflows/: ci.yml
dashboard/: requirements.txt  server.py
dashboard/static/: complexity.js  files.js  findings.js  graph.js  index.html
docs/: ARCHITECTURE.md  DATA_FLOW.md  EXTENSION_GUIDE.md  PRODUCTION_COMPETITIVE_REVIEW.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_2026-04-01_agent_tools_settings_hardening.md  RELEASE_NOTES_2026-04-03_terminal_copy_provider_autodetect.md  REVIEW_2026-04-02_full_validation.md
docs/brain/: TODO_BRAIN_MODE.md
docs/missions/: MISSION_00_MASTER_PLAN.md  MISSION_09_PERSPECTIVES.md  MISSION_10_SESSIONS.md  MISSION_11_MISSION_GENERATION.md  MISSION_13_INLINE_ACTIONS.md  MISSION_16_WHATS_NEXT.md
docs/missions/Composed Missions/: MISSION_01_SETUP.md  MISSION_02_FILE_SCANNER.md  MISSION_03_PARSER.md  MISSION_04_TUI.md  MISSION_05_LSP.md  MISSION_06_PYO3_BRIDGE.md  MISSION_07_NEO4J_GRAPH.md  MISSION_08_CHUNKING.md  MISSION_12_LLM_PROVIDERS.md  MISSION_14_WEB_DASHBOARD.md  MISSION_15_REVIEW_POLISH.md
docs/missions/Official Missions/: 00_MASTER_PLAN.md  MISSION_01_project_setup.md  MISSION_02_scanner_hasher.md  MISSION_03_parser_metrics.md  MISSION_04_tui_shell.md  MISSION_05_lsp_client.md  MISSION_06_pyo3_bridge.md  MISSION_INDEX.md  (+21 more)
python-orchestrator/: pyproject.toml
python-orchestrator/nala_orchestrator/: __init__.py  agent_worker.py  cli.py  config.py  git_ops.py  git_review.py  repo_detect.py  startup.py
python-orchestrator/nala_orchestrator/agent_runtime/: __init__.py  executor.py  manager.py  mission_writer.py  state.py  tool_defs.py  tool_executor.py  toolbox.py  workers.py
python-orchestrator/nala_orchestrator/agents/: __init__.py  action_executor.py  action_extractor.py  actions.py  launcher.py  orchestrator.py  registry.py  spawn_screen.py  spawn_subprocess.py  spawn_tmux.py  terminal.py
python-orchestrator/nala_orchestrator/chunking/: __init__.py  assembler.py  embedder.py  splitter.py
python-orchestrator/nala_orchestrator/compression/: __init__.py  code_context.py  dedup.py  facts.py  pipeline.py  quality.py  structural.py  tool_outputs.py
python-orchestrator/nala_orchestrator/context/: __init__.py  background_summary.py  compactor.py  config.py  counter.py  detector.py
python-orchestrator/nala_orchestrator/core/: __init__.py  project_detector.py
python-orchestrator/nala_orchestrator/graph/: __init__.py  builder.py  connection.py  context.py  queries.py  schema.py
python-orchestrator/nala_orchestrator/handoff/: __init__.py  reader.py  schema.py  writer.py
python-orchestrator/nala_orchestrator/llm/: __init__.py  anthropic_provider.py  google_provider.py  ollama_provider.py  openai_provider.py  provider.py
python-orchestrator/nala_orchestrator/memory/: __init__.py  compression.py  knowledge.py  session_memory.py  short_term.py
python-orchestrator/nala_orchestrator/models/: __init__.py  catalog.py  registry.py  router.py  types.py
python-orchestrator/nala_orchestrator/multi_agent/: __init__.py  decomposer.py  file_locks.py  lead.py  messages.py  spawner.py  task_list.py
python-orchestrator/nala_orchestrator/orchestrator/: __init__.py  brain.py  classifier.py  planner.py  synthesizer.py
python-orchestrator/nala_orchestrator/perspectives/: __init__.py  base.py  chunking.py  churn.py  complexity.py  dead_code.py  dependency.py  duplication.py  engine.py  performance.py  security.py  test_coverage.py
python-orchestrator/nala_orchestrator/research/: __init__.py  cache.py  models.py  service.py
python-orchestrator/nala_orchestrator/review/: __init__.py  diff.py  engine.py  enricher.py  learnings.py  models.py  output.py  prompt_generator.py  verifier.py
python-orchestrator/nala_orchestrator/review/rules/: __init__.py  base.py  concurrency.py  consistency.py  error_handling.py  react_hooks.py  security.py  unused.py
python-orchestrator/nala_orchestrator/sessions/: __init__.py  manager.py  missions.py  report.py
python-orchestrator/nala_orchestrator/settings/: __init__.py  loader.py  schema.py  writer.py
python-orchestrator/nala_orchestrator/shell/: __init__.py  approvals.py  message_bus.py  router.py
python-orchestrator/nala_orchestrator/skills/: __init__.py  models.py  registry.py
python-orchestrator/nala_orchestrator/tasks/: __init__.py  ledger.py
python-orchestrator/tests/: test_agent_spawning.py  test_chunking_strategies.py  test_churn_perspective.py  test_cli_artifacts.py  test_coding_workflow_state.py  test_context_memory_pipeline.py  test_handoff_continuity.py  test_missions_29_to_32.py  test_p7_integration.py  test_performance_perspective.py  test_perspectives_engine.py  test_review_engine.py  test_session_compare.py
rust-core/: Cargo.toml
rust-core/nala-bridge/: Cargo.toml  pyproject.toml
rust-core/nala-bridge/src/: lib.rs
rust-core/nala-cli/: Cargo.toml
rust-core/nala-cli/src/: constants.rs  main.rs
rust-core/nala-indexer/: Cargo.toml
rust-core/nala-indexer/src/: cache.rs  hasher.rs  lib.rs  metrics.rs  parser.rs  scanner.rs  symbol_graph.rs
rust-core/nala-lsp/: Cargo.toml
rust-core/nala-lsp/src/: client.rs  config.rs  diagnostics.rs  lib.rs  transport.rs
rust-core/nala-tui/: Cargo.toml
rust-core/nala-tui/src/: actions.rs  app.rs  commands.rs  lib.rs  lsp_commands.rs  python_bridge.rs
rust-core/nala-tui/src/ui/: agent_panel.rs  command_bar.rs  diff.rs  file_panel.rs  help.rs  layout.rs  markdown.rs  mod.rs  session_panel.rs  splash.rs  status_bar.rs  theme.rs
scripts/: benchmark.ps1  benchmark.sh  setup.ps1  setup.sh
(+4 files in other folders)
