[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "nala-orchestrator"
version         = "0.1.0"
description     = "Python orchestration layer for Nala — AI, Neo4j graph, analysis perspectives"
requires-python = ">=3.11"
dependencies = [
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "google-generativeai>=0.8.0",
    # Graph database
    "neo4j>=5.25.0",
    # Web dashboard (optional, for Mission 14)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Utilities
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
nala-orchestrator = "nala_orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nala_orchestrator"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
