[build-system]
requires      = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name            = "nala-core"
version         = "0.1.0"
requires-python = ">=3.11"
description     = "Rust-powered core engine for Nala — file scanning, parsing, and metrics"

[tool.maturin]
module-name   = "nala_core"
manifest-path = "Cargo.toml"
features      = ["pyo3/extension-module"]
