[package]
name = "nala-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "nala"
path = "src/main.rs"

[dependencies]
nala-tui.workspace     = true
nala-indexer.workspace = true
tokio.workspace        = true
clap.workspace         = true
anyhow.workspace       = true
tracing.workspace      = true
tracing-subscriber.workspace = true
serde_json.workspace = true
