[package]
name = "nala-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tree-sitter            = "0.23"
tree-sitter-rust       = "0.23"
tree-sitter-python     = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go         = "0.23"
walkdir.workspace      = true
sha2.workspace         = true
rayon.workspace        = true
rusqlite.workspace     = true
serde.workspace        = true
serde_json.workspace   = true
anyhow.workspace       = true
tracing.workspace      = true

[dev-dependencies]
tempfile = "3"
