[package]
name = "nala-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lsp-types.workspace  = true
tokio.workspace      = true
tokio-util.workspace = true
bytes.workspace      = true
anyhow.workspace     = true
tracing.workspace    = true
serde.workspace      = true
serde_json.workspace = true
url.workspace        = true
